# sfm-editor

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
res/assets/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  line.vert  picking.frag  picking.vert  postprocess.frag  postprocess.vert
sfm-editor/src/: main.cpp
src/: main.cpp
src/Core/: ActionHistory.cpp  ActionHistory.h  Application.cpp  Application.h  EditorSystem.cpp  EditorSystem.h  Events.hpp  Input.cpp  Input.h  KeyCodes.hpp  Logger.cpp  Logger.h  SelectionManager.cpp  SelectionManager.h  Types.hpp  Window.cpp  Window.h
src/IO/: FileDialog.cpp  FileDialog.h  ModelLoader.cpp  ModelLoader.h  SceneExporter.cpp  SceneExporter.h
src/Renderer/: EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  LineRenderer.cpp  LineRenderer.h  SceneGrid.cpp  SceneGrid.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h
src/UI/: UIManager.cpp  UIManager.h
src/UI/Panels/: AnalyticsPanel.cpp  AnalyticsPanel.h  ConsolePanel.cpp  ConsolePanel.h  PropertiesPanel.cpp  PropertiesPanel.h  UIPanel.h  ViewportPanel.cpp  ViewportPanel.h
